add new website from server na

--- a/xem-phim-moi/deadpool-va-wolverine/index.html
+++ b/xem-phim-moi/deadpool-va-wolverine/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             17
+             18
             </dd>
             <br/>
            </dl>
@@ -1774,21 +1774,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bach-li-da-dao" title="Bách Lí Dạ Đao">
+          <a class="list-top-movie-link" href="/phim-moi/bai-hat-cho-cong-dan-nhi" title="Bài hát cho công dân nhí">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bach-li-da-dao-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bai-hat-cho-cong-dan-nhi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bách Lí Dạ Đao
+             Bài hát cho công dân nhí
             </span>
             <span class="list-top-movie-item-en">
-             Knife's Blood Filled With Honors
+             We the People
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1796,18 +1796,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tu-khi-co-polly" title="Từ Khi Có Polly">
+          <a class="list-top-movie-link" href="/phim-moi/so-1-han-quoc" title="Số 1 Hàn Quốc">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tu-khi-co-polly-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/so-1-han-quoc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Từ Khi Có Polly
+             Số 1 Hàn Quốc
             </span>
             <span class="list-top-movie-item-en">
-             Along Came Polly
+             Korea No.1
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1818,21 +1818,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cam-on-vi-hut-thuoc" title="Cảm Ơn Vì Hút Thuốc">
+          <a class="list-top-movie-link" href="/phim-moi/trai-he-dung-cam" title="Trại hè dũng cảm">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cam-on-vi-hut-thuoc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/trai-he-dung-cam-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cảm Ơn Vì Hút Thuốc
+             Trại hè dũng cảm
             </span>
             <span class="list-top-movie-item-en">
-             Thank You for Smoking
+             Camp Courage
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1840,18 +1840,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/punjab-hoang-da" title="Punjab Hoang Dã">
+          <a class="list-top-movie-link" href="/phim-moi/quy-ong-hoan-hao-va-co-nang-tam-duoc" title="Quý Ông Hoàn Hảo Và Cô Nàng Tạm Được">
            <span class="status">
-            HD Vietsub
+            HD Vietsub + Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/punjab-hoang-da-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quy-ong-hoan-hao-va-co-nang-tam-duoc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Punjab Hoang Dã
+             Quý Ông Hoàn Hảo Và Cô Nàng Tạm Được
             </span>
             <span class="list-top-movie-item-en">
-             Wild Wild Punjab
+             Perfect And Casual
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1862,21 +1862,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phat-tai" title="Phát Tài">
+          <a class="list-top-movie-link" href="/phim-moi/tinh-dam-sau" title="Tình Đậm Sâu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phat-tai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-dam-sau-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Phát Tài
+             Tình Đậm Sâu
             </span>
             <span class="list-top-movie-item-en">
-             Becoming Rich
+             77 Heartbreaks
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
