--- a/xem-phim-bo/qua-chieu/index.html
+++ b/xem-phim-bo/qua-chieu/index.html
@@ -1185,7 +1185,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1631,28 +1631,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
-           <span class="status">
-            FHD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-ca-hanh-2022-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thiếu Niên Ca Hành
-            </span>
-            <span class="list-top-movie-item-en">
-             The Blood of Youth
-            </span>
-            <span class="list-top-movie-item-view">
-             51 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
            <span class="status">
             HD Vietsub
@@ -1665,6 +1643,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             </span>
             <span class="list-top-movie-item-en">
              Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-view">
+             51 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
+           <span class="status">
+            FHD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-ca-hanh-2022-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thiếu Niên Ca Hành
+            </span>
+            <span class="list-top-movie-item-en">
+             The Blood of Youth
             </span>
             <span class="list-top-movie-item-view">
              51 lượt xem
@@ -1688,18 +1688,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nga-my-son" title="Nga My Sơn">
+          <a class="list-top-movie-link" href="/phim-moi/sieu-nhan-cui-bap" title="Siêu Nhân Cùi Bắp">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nga-my-son-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sieu-nhan-cui-bap-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nga My Sơn
+             Siêu Nhân Cùi Bắp
             </span>
             <span class="list-top-movie-item-en">
-             China Inheriting: Mount Emei
+             Super
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1710,18 +1710,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thuy-quan-luc-chien" title="Thủy Quân Lục Chiến">
+          <a class="list-top-movie-link" href="/phim-moi/co-em-ho-bat-dac-di" title="Cô Em Họ Bất Đắc Dĩ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thuy-quan-luc-chien-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-em-ho-bat-dac-di-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thủy Quân Lục Chiến
+             Cô Em Họ Bất Đắc Dĩ
             </span>
             <span class="list-top-movie-item-en">
-             The Marine
+             My Girl Thailand
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1732,18 +1732,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ghostbusters" title="Ghostbusters">
+          <a class="list-top-movie-link" href="/phim-moi/dang-hinh-tinh-yeu" title="Dáng Hình Tình Yêu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ghostbusters-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dang-hinh-tinh-yeu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ghostbusters
+             Dáng Hình Tình Yêu
             </span>
             <span class="list-top-movie-item-en">
-             Ghostbusters
+             Love the way you are
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1754,18 +1754,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lan-dau-cua-con-gai-nuoi" title="Lần Đầu Của Con Gái Nuôi">
+          <a class="list-top-movie-link" href="/phim-moi/lan-dau-cua-co-ban-gai-ngay-tho" title="Lần Đầu Của Cô Bạn Gái Ngây Thơ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lan-dau-cua-con-gai-nuoi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lan-dau-cua-co-ban-gai-ngay-tho-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lần Đầu Của Con Gái Nuôi
+             Lần Đầu Của Cô Bạn Gái Ngây Thơ
             </span>
             <span class="list-top-movie-item-en">
-             입양딸 : 여자가 되다
+             순진한여자친구와첫경험
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1776,21 +1776,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/su-cuu-roi-phan-1" title="Sự cứu rỗi (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/cupcake-dino-dich-vu-tong-hop-phan-1" title="Cupcake &amp; Dino – Dịch vụ tổng hợp (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-cuu-roi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cupcake-dino-dich-vu-tong-hop-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sự cứu rỗi (Phần 1)
+             Cupcake &amp; Dino – Dịch vụ tổng hợp (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             Salvation (Season 1)
+             Cupcake &amp; Dino - General Services (Season 1)
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
