--- a/xem-phim-moi/thoa-thuan-voi-ac-quy/index.html
+++ b/xem-phim-moi/thoa-thuan-voi-ac-quy/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1782,84 +1782,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/uoc-gi-duoc-nay" title="Ước Gì Được Nấy">
-           <span class="status">
-            HD VietSub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/uoc-gi-duoc-nay-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Ước Gì Được Nấy
-            </span>
-            <span class="list-top-movie-item-en">
-             Switch
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/amandla" title="Amandla">
+          <a class="list-top-movie-link" href="/phim-moi/su-noi-loan-hoan-hao-3" title="Sự Nổi Loạn Hoàn Hảo 3">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/amandla-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-noi-loan-hoan-hao-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Amandla
+             Sự Nổi Loạn Hoàn Hảo 3
             </span>
             <span class="list-top-movie-item-en">
-             Amandla
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vo-si-cho-den-nguoi-mu" title="Võ sĩ chợ đen: Người mù">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vo-si-cho-den-nguoi-mu-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Võ sĩ chợ đen: Người mù
-            </span>
-            <span class="list-top-movie-item-en">
-             Black Market Boxer: Blind Boxer
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nu-sinh-bao-luc" title="Nữ Sinh Bạo Lực">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-sinh-bao-luc-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Nữ Sinh Bạo Lực
-            </span>
-            <span class="list-top-movie-item-en">
-             Kill La Kill
+             Pitch Perfect 3
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1870,21 +1804,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/noi-loan-cung-tammy" title="Nổi Loạn Cùng Tammy">
+          <a class="list-top-movie-link" href="/phim-moi/du-ghet-van-yeu" title="Dù Ghét Vẫn Yêu">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/noi-loan-cung-tammy-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/du-ghet-van-yeu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nổi Loạn Cùng Tammy
+             Dù Ghét Vẫn Yêu
             </span>
             <span class="list-top-movie-item-en">
-             Tammy
+             Love Returns
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ac-quy-o-ohio" title="Ác quỷ ở Ohio">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ac-quy-o-ohio-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Ác quỷ ở Ohio
+            </span>
+            <span class="list-top-movie-item-en">
+             Devil in Ohio
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/anh-chang-shipper-va-co-nang-quy-phi" title="Anh Chàng Shipper Và Cô Nàng Quý Phi">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/anh-chang-shipper-va-co-nang-quy-phi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Anh Chàng Shipper Và Cô Nàng Quý Phi
+            </span>
+            <span class="list-top-movie-item-en">
+             Mr. Express And Miss Concubine
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/sat-thu-vi-thanh-nien" title="Sát Thủ Vị Thành Niên">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sat-thu-vi-thanh-nien-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Sát Thủ Vị Thành Niên
+            </span>
+            <span class="list-top-movie-item-en">
+             Them
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
