add new website from server na

--- a/xem-phim-moi/thoa-thuan-voi-ac-quy/index.html
+++ b/xem-phim-moi/thoa-thuan-voi-ac-quy/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1782,18 +1782,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/su-noi-loan-hoan-hao-3" title="Sự Nổi Loạn Hoàn Hảo 3">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-bi-an-cua-duc-tin" title="Những bí ẩn của đức tin">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-noi-loan-hoan-hao-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-bi-an-cua-duc-tin-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sự Nổi Loạn Hoàn Hảo 3
+             Những bí ẩn của đức tin
             </span>
             <span class="list-top-movie-item-en">
-             Pitch Perfect 3
+             Mysteries of the Faith
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/bac-thay-keo-bac-va-hac-tinh-linh" title="Bậc thầy kẹo bạc và hắc tinh linh">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sugar-apple-fairy-tale-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bậc thầy kẹo bạc và hắc tinh linh
+            </span>
+            <span class="list-top-movie-item-en">
+             Sugar Apple Fairy Tale
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1804,62 +1826,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/du-ghet-van-yeu" title="Dù Ghét Vẫn Yêu">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/du-ghet-van-yeu-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Dù Ghét Vẫn Yêu
-            </span>
-            <span class="list-top-movie-item-en">
-             Love Returns
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ac-quy-o-ohio" title="Ác quỷ ở Ohio">
+          <a class="list-top-movie-link" href="/phim-moi/cul-de-sac" title="Cul-de-sac">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ac-quy-o-ohio-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cul-de-sac-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ác quỷ ở Ohio
+             Cul-de-sac
             </span>
             <span class="list-top-movie-item-en">
-             Devil in Ohio
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/anh-chang-shipper-va-co-nang-quy-phi" title="Anh Chàng Shipper Và Cô Nàng Quý Phi">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/anh-chang-shipper-va-co-nang-quy-phi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Anh Chàng Shipper Và Cô Nàng Quý Phi
-            </span>
-            <span class="list-top-movie-item-en">
-             Mr. Express And Miss Concubine
+             Cul-de-sac
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1870,18 +1848,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sat-thu-vi-thanh-nien" title="Sát Thủ Vị Thành Niên">
+          <a class="list-top-movie-link" href="/phim-moi/ban-toi-ke-thua-mot-homestay" title="Bạn Tôi Kế Thừa Một Homestay">
            <span class="status">
-            HD Vietsub
+            FHD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sat-thu-vi-thanh-nien-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ban-toi-ke-thua-mot-homestay-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sát Thủ Vị Thành Niên
+             Bạn Tôi Kế Thừa Một Homestay
             </span>
             <span class="list-top-movie-item-en">
-             Them
+             Escape to Homestay
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/khu-rung-nho-cua-hai-nguoi" title="Khu Rừng Nhỏ Của Hai Người">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khu-rung-nho-cua-hai-nguoi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Khu Rừng Nhỏ Của Hai Người
+            </span>
+            <span class="list-top-movie-item-en">
+             A Romance of the Little Forest
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
