add new website from server na

--- a/xem-phim-bo/niem-niem-nhan-gian-ngoc/index.html
+++ b/xem-phim-bo/niem-niem-nhan-gian-ngoc/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1766,18 +1766,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-nguoi-ban-phan-4" title="Những người bạn (Phần 4)">
+          <a class="list-top-movie-link" href="/phim-moi/dem-truoc-le-tot-nghiep" title="Đêm Trước Lễ Tốt Nghiệp">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-nguoi-ban-phan-4-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dem-truoc-le-tot-nghiep-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Những người bạn (Phần 4)
+             Đêm Trước Lễ Tốt Nghiệp
             </span>
             <span class="list-top-movie-item-en">
-             Friends (Season 4)
+             Booksmart
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1788,18 +1788,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nuoi-day-dion-phan-2" title="Nuôi dạy Dion (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-ngay-tot-dep-hon-se-den" title="Những Ngày Tốt Đẹp Hơn Sẽ Đến">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nuoi-day-dion-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/better-days-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nuôi dạy Dion (Phần 2)
+             Những Ngày Tốt Đẹp Hơn Sẽ Đến
             </span>
             <span class="list-top-movie-item-en">
-             Raising Dion (Season 2)
+             Better Days
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1810,18 +1810,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bay-dem-trong-nha-tro" title="Bảy đêm trong nhà trọ">
+          <a class="list-top-movie-link" href="/phim-moi/chien-tranh-tinh-yeu" title="Chiến tranh tình yêu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bay-dem-trong-nha-tro-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chien-tranh-tinh-yeu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bảy đêm trong nhà trọ
+             Chiến tranh tình yêu
             </span>
             <span class="list-top-movie-item-en">
-             There Is No Truth Before Daybreak
+             Love War
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/bac-si-yo-han" title="Bác sĩ Yo Han">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bac-si-yo-han-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bác sĩ Yo Han
+            </span>
+            <span class="list-top-movie-item-en">
+             Doctor John
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1832,43 +1854,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/arcadian" title="Arcadian">
+          <a class="list-top-movie-link" href="/phim-moi/10-dieu-em-ghet-anh" title="10 Điều Em Ghét Anh">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/arcadian-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/10-dieu-em-ghet-anh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Arcadian
+             10 Điều Em Ghét Anh
             </span>
             <span class="list-top-movie-item-en">
-             Arcadian
+             10 Things I Hate About You
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ky-nang-mat-xa-chuyen-nghiep-cua-con-dau" title="Kỹ Năng Mát Xa Chuyên Nghiệp Của Con Dâu">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ky-nang-msat-xa-chuyen-nghiep-cua-con-dau-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Kỹ Năng Mát Xa Chuyên Nghiệp Của Con Dâu
-            </span>
-            <span class="list-top-movie-item-en">
-             마사지에 빠진 예비신부
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
